--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -33,16 +33,16 @@
     "___\n",
     "<div id=\"biblio\"></div>\n",
     "\n",
-    "## Importação de bibliotecas utilizadas"
+    "#####  Importação de bibliotecas utilizadas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importações\n",
+    "# Importações\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -54,25 +54,26 @@
    "metadata": {},
    "source": [
     "___\n",
+    "> **Qual o salário mais provável, baseado no tempo de escolaridade de uma pessoa?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div id=\"base-dados\"></div>\n",
     "\n",
-    "## Importação da base de dados e criação de variáveis:\n",
+    "##### **Base de dados.**\n",
+    "- Importação da base de dados.\n",
+    "- Criação das variáveis.\n",
+    "<br><br>\n",
     "\n",
     "[Índice](#indice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dados = pd.read_csv(\"pnad23_filtrado.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,185 +141,40 @@
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3700.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Homem</td>\n",
-       "      <td>36</td>\n",
-       "      <td>Parda</td>\n",
-       "      <td>Regular do ensino fundamental ou do 1º grau</td>\n",
-       "      <td>Conta Própria</td>\n",
-       "      <td>[2SM]+1 a [3SM]</td>\n",
-       "      <td>3300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Homem</td>\n",
-       "      <td>33</td>\n",
-       "      <td>Branca</td>\n",
-       "      <td>Regular do ensino médio ou do 2º grau</td>\n",
-       "      <td>Conta Própria</td>\n",
-       "      <td>[2SM]+1 a [3SM]</td>\n",
-       "      <td>3500.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Estado    Sexo  Idade Cor_ou_Raça  \\\n",
-       "0  Rondônia   Homem     30       Parda   \n",
-       "1  Rondônia  Mulher     50       Parda   \n",
-       "2  Rondônia  Mulher     54      Branca   \n",
-       "3  Rondônia   Homem     36       Parda   \n",
-       "4  Rondônia   Homem     33      Branca   \n",
-       "\n",
-       "                                  Escolaridade  \\\n",
-       "0        Regular do ensino médio ou do 2º grau   \n",
-       "1                         Superior - graduação   \n",
-       "2                         Superior - graduação   \n",
-       "3  Regular do ensino fundamental ou do 1º grau   \n",
-       "4        Regular do ensino médio ou do 2º grau   \n",
+       "     Estado    Sexo  Idade Cor_ou_Raça                           Escolaridade  \\\n",
+       "0  Rondônia   Homem     30       Parda  Regular do ensino médio ou do 2º grau   \n",
+       "1  Rondônia  Mulher     50       Parda                   Superior - graduação   \n",
+       "2  Rondônia  Mulher     54      Branca                   Superior - graduação   \n",
        "\n",
        "                                            Ocupação Faixa_de_rendimento  \\\n",
        "0                                      Conta Própria     [3SM]+1 a [5SM]   \n",
        "1  Empregado do setor público (inclusive empresas...     [2SM]+1 a [3SM]   \n",
        "2  Empregado do setor público (inclusive empresas...     [2SM]+1 a [3SM]   \n",
-       "3                                      Conta Própria     [2SM]+1 a [3SM]   \n",
-       "4                                      Conta Própria     [2SM]+1 a [3SM]   \n",
        "\n",
        "   Rendimento_Bruto  \n",
        "0            5000.0  \n",
        "1            3500.0  \n",
-       "2            3700.0  \n",
-       "3            3300.0  \n",
-       "4            3500.0  "
+       "2            3700.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados.head(5)"
+    "dados = pd.read_csv(\"pnad23_filtrado.csv\")\n",
+    "dados.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0          Regular do ensino médio ou do 2º grau\n",
-       "1                           Superior - graduação\n",
-       "2                           Superior - graduação\n",
-       "3    Regular do ensino fundamental ou do 1º grau\n",
-       "4          Regular do ensino médio ou do 2º grau\n",
-       "Name: Escolaridade, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados.Escolaridade.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Estado</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Sexo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Idade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cor_ou_Raça</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Escolaridade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Ocupação</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Faixa_de_rendimento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Rendimento_Bruto</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     0\n",
-       "0               Estado\n",
-       "1                 Sexo\n",
-       "2                Idade\n",
-       "3          Cor_ou_Raça\n",
-       "4         Escolaridade\n",
-       "5             Ocupação\n",
-       "6  Faixa_de_rendimento\n",
-       "7     Rendimento_Bruto"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(pd.Series(dados.columns).to_frame())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +191,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,10 +214,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
     "<div id=\"esc-bruto\"></div>\n",
     "\n",
-    "## Análise de relação de Escolaridade X Rendimento Bruto"
+    "##### **Análise de relação de Escolaridade X Rendimento Bruto**\n",
+    "- Cálculo de média e mediana para cada tipo de escolaridade.\n",
+    "- Visualizando em forma de histograma."
    ]
   },
   {
@@ -369,68 +226,6 @@
    "metadata": {},
    "source": [
     "[Índice](#indice)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0               Regular do ensino médio ou do 2º grau\n",
-       "1                                Superior - graduação\n",
-       "2                                Superior - graduação\n",
-       "3         Regular do ensino fundamental ou do 1º grau\n",
-       "4               Regular do ensino médio ou do 2º grau\n",
-       "                             ...                     \n",
-       "175176                           Superior - graduação\n",
-       "175177                           Superior - graduação\n",
-       "175178               Especialização de nível superior\n",
-       "175179                           Superior - graduação\n",
-       "175180                           Superior - graduação\n",
-       "Name: Escolaridade, Length: 175181, dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados[\"Escolaridade\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0          5000.0\n",
-       "1          3500.0\n",
-       "2          3700.0\n",
-       "3          3300.0\n",
-       "4          3500.0\n",
-       "           ...   \n",
-       "175176     5000.0\n",
-       "175177     3500.0\n",
-       "175178    10000.0\n",
-       "175179     5000.0\n",
-       "175180     5000.0\n",
-       "Name: Rendimento_Bruto, Length: 175181, dtype: float64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados[\"Rendimento_Bruto\"]"
    ]
   },
   {
@@ -721,61 +516,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!-- ___\n",
-    "<div id=\"salario-faixa\"></div>\n",
-    "\n",
-    "## Distribuição Salarial por Faixa de Rendimento\n",
-    "\n",
-    "[Índice](#indice) -->"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "___\n",
     "<div id=\"sexo-cor\"></div>\n",
     "\n",
-    "## Análise por Sexo e Cor/Raça\n",
+    "##### **Análise por Sexo e Cor/Raça**\n",
+    "- Aqui será feita a busca por valores aberrantes e por amostras que possam alterar demais os resultados finais.\n",
     "\n",
     "[Índice](#indice)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Busca por valores aberrantes\n",
-    "Aqui será feita a busca por valores aberrantes e por amostras que possam alterar demais os resultados finais"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dados de Raça"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -852,6 +607,7 @@
     }
    ],
    "source": [
+    "# Dados de raça:\n",
     "df_raca = dados[\"Cor_ou_Raça\"]\n",
     "df_raca.value_counts().to_frame()"
    ]
@@ -944,9 +700,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remoção de valores aberrantes\n",
+    "##### **Remoção de valores aberrantes**\n",
     "\n",
-    "Baseado na análise dos valores de rendimento bruto separado em sexo e raça, foi decidido remover os valores que marcaram \"Ignorado\" na coluna \"Cor_ou_Raça\", uma vez que esses representam uma parte muito pequena da quantidade total de dados, mas possuem uma média muito elevada de Rendimento Bruto"
+    "- Baseado na análise dos valores de rendimento bruto separado em sexo e raça, foi decidido remover os valores que marcaram \"Ignorado\" na coluna \"Cor_ou_Raça\", uma vez que esses representam uma parte muito pequena da quantidade total de dados, mas possuem uma média muito elevada de Rendimento Bruto"
    ]
   },
   {
@@ -1068,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dados de Sexo"
+    "##### **Dados de Sexo**"
    ]
   },
   {
@@ -1227,7 +983,7 @@
     "___\n",
     "<div id=\"idade\"></div>\n",
     "\n",
-    "## Análise por Idade\n",
+    "##### **Análise por Idade**\n",
     "\n",
     "[Índice](#indice)"
    ]
@@ -1263,8 +1019,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Separando por faixa etaria\n",
-    "Vamos classificar cada membro do dataframe com base na sua faixa etaria para facilitar a vizualização do impacto da idade na renda media"
+    "##### **Separando por faixa etaria**\n",
+    "- Vamos classificar cada membro do dataframe com base na sua faixa etaria para facilitar a vizualização do impacto da idade na renda media"
    ]
   },
   {
@@ -1362,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grafico de rendimento bruto por faixa etaria"
+    "##### **Grafico de rendimento bruto por faixa etaria**"
    ]
   },
   {
@@ -1395,15 +1151,10 @@
     "___\n",
     "<div id=\"ocupa\"></div>\n",
     "\n",
-    "## Distribuição por Ocupação\n",
+    "##### **Distribuição por Ocupação**\n",
     "\n",
     "[Índice](#indice)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1518,7 +1269,7 @@
     "___\n",
     "<div id=\"finais\"></div>\n",
     "\n",
-    "## Considerações Finais\n",
+    "##### **Considerações Finais**\n",
     "\n",
     "[Índice](#indice)"
    ]
@@ -1527,7 +1278,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ao analizar os graficos, é possivel concluir que os principais fatores que influenciam o rendimento bruto são o nivel de escolaridade e a ocupação, com niveis de escolaridade maiores, como doutorado, possuindo uma renda media muito maior que o resto, e ocupações empregador e militares tendo uma renda media maior. Tambem é possivel perceber que há uma disparidade de renda media entre generos e raça, com homens ganhando mais do que mulheres e pessoas de raça amarela e branca ganhando mais que pessoas pardas, negras e indigenas. Por fim, tambem é possivel vizualizar que a faixa etaria tambem afeta o rendimento medio, com pessoas mais velhas possuindo um rendimento medio maior, provavelmente devido a maior experiencia no mercado de trabalho e em suas areas de conhecimento."
+    "Ao analizar os graficos, é possivel concluir que os principais fatores que influenciam o rendimento bruto são o nivel de escolaridade e a ocupação, com niveis de escolaridade maiores, como doutorado, possuindo uma renda media muito maior que o resto, e ocupações empregador e militares tendo uma renda media maior.<br><br>\n",
+    "Tambem é possivel perceber que há uma disparidade de renda media entre generos e raça, com homens ganhando mais do que mulheres e pessoas de raça amarela e branca ganhando mais que pessoas pardas, negras e indigenas.<br><br>\n",
+    "Por fim, tambem é possivel vizualizar que a faixa etaria tambem afeta o rendimento medio, com pessoas mais velhas possuindo um rendimento medio maior, provavelmente devido a maior experiencia no mercado de trabalho e em suas areas de conhecimento."
    ]
   }
  ],
